--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,5 @@
-#version=1.4
-include: "https://raw.githubusercontent.com/KIT-MRT/mrt_cmake_modules/master/ci_templates/default_catkin_project.yml"
+#version=1.6
+include:
+   - project: 'pub/mrt_build_config'
+     ref: master
+     file: '/ci_templates/default_catkin_project.yml'
